# hermes-system-nodes

./: README.md  pyproject.toml
src/hermes_system_nodes/: cpu_node.py
